--- a/PLOT.ipynb
+++ b/PLOT.ipynb
@@ -95,8 +95,7 @@
    ],
    "source": [
     "data = load_boston()\n",
-    "X = pd.DataFrame(data.data, columns=data.feature_names)\n",
-    "y = pd.Series(load_boston().target)"
+    "X = pd.DataFrame(data.data, columns=data.feature_names)"
    ]
   },
   {
@@ -300,7 +299,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.9 (main, Dec  7 2022, 00:00:00) [GCC 12.2.1 20221121 (Red Hat 12.2.1-4)]"
   },
   "orig_nbformat": 4,
   "vscode": {
